--- a/xengine/xengine.vcxproj.filters
+++ b/xengine/xengine.vcxproj.filters
@@ -16,15 +16,15 @@
     <Filter Include="base">
       <UniqueIdentifier>{72e1837b-e263-4536-b2ec-cdef4bf0a811}</UniqueIdentifier>
     </Filter>
+    <Filter Include="renderer">
+      <UniqueIdentifier>{b9216ecb-14b9-44ae-808f-76ed553619fb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="math\Matrix.h">
       <Filter>math</Filter>
     </ClInclude>
     <ClInclude Include="math\Color.h">
-      <Filter>math</Filter>
-    </ClInclude>
-    <ClInclude Include="math\Vector.h">
       <Filter>math</Filter>
     </ClInclude>
     <ClInclude Include="math\Vector2.h">
@@ -40,9 +40,6 @@
       <Filter>platform\windows</Filter>
     </ClInclude>
     <ClInclude Include="math\Rect.h">
-      <Filter>math</Filter>
-    </ClInclude>
-    <ClInclude Include="math\XEMath.h">
       <Filter>math</Filter>
     </ClInclude>
     <ClInclude Include="event\Event.h">
@@ -69,6 +66,30 @@
     <ClInclude Include="platform\windows\Appliction_win.h">
       <Filter>platform\windows</Filter>
     </ClInclude>
+    <ClInclude Include="base\Node.h">
+      <Filter>base</Filter>
+    </ClInclude>
+    <ClInclude Include="math\FQuat.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="math\Vector3.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="math\FRotator.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="math\XEMath.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="math\XEMathUtility.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="renderer\Renderer.h">
+      <Filter>renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="renderer\FrameBuffer.h">
+      <Filter>renderer</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="platform\windows\GLViewImpl_win.cpp">
@@ -80,11 +101,23 @@
     <ClCompile Include="platform\windows\Appliction_win.cpp">
       <Filter>platform\windows</Filter>
     </ClCompile>
-    <ClCompile Include="XEMathStatic.cpp">
-      <Filter>math</Filter>
-    </ClCompile>
     <ClCompile Include="platform\PlatformStatic.cpp">
       <Filter>platform</Filter>
+    </ClCompile>
+    <ClCompile Include="base\Node.cpp">
+      <Filter>base</Filter>
+    </ClCompile>
+    <ClCompile Include="base\inlineNode.cpp">
+      <Filter>base</Filter>
+    </ClCompile>
+    <ClCompile Include="math\XEMath.cpp">
+      <Filter>math</Filter>
+    </ClCompile>
+    <ClCompile Include="renderer\Renderer.cpp">
+      <Filter>renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="renderer\FrameBuffer.cpp">
+      <Filter>renderer</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
