--- a/xengine/xengine.vcxproj.filters
+++ b/xengine/xengine.vcxproj.filters
@@ -84,9 +84,6 @@
     <ClInclude Include="math\XEMathUtility.h">
       <Filter>math</Filter>
     </ClInclude>
-    <ClInclude Include="renderer\Renderer.h">
-      <Filter>renderer</Filter>
-    </ClInclude>
     <ClInclude Include="renderer\FrameBuffer.h">
       <Filter>renderer</Filter>
     </ClInclude>
@@ -96,21 +93,6 @@
     <ClInclude Include="base\Sprite.h">
       <Filter>base</Filter>
     </ClInclude>
-    <ClInclude Include="base\NodeDraw.h">
-      <Filter>base</Filter>
-    </ClInclude>
-    <ClInclude Include="renderer\CommandPrimitive.h">
-      <Filter>renderer</Filter>
-    </ClInclude>
-    <ClInclude Include="renderer\CommandTriangle.h">
-      <Filter>renderer</Filter>
-    </ClInclude>
-    <ClInclude Include="renderer\CommandMesh.h">
-      <Filter>renderer</Filter>
-    </ClInclude>
-    <ClInclude Include="renderer\IRenderCommand.h">
-      <Filter>renderer</Filter>
-    </ClInclude>
     <ClInclude Include="renderer\Texture2D.h">
       <Filter>renderer</Filter>
     </ClInclude>
@@ -118,6 +100,18 @@
       <Filter>renderer</Filter>
     </ClInclude>
     <ClInclude Include="xeTypes.h" />
+    <ClInclude Include="base\Scene.h">
+      <Filter>base</Filter>
+    </ClInclude>
+    <ClInclude Include="base\Camera.h">
+      <Filter>base</Filter>
+    </ClInclude>
+    <ClInclude Include="renderer\Renderer.h">
+      <Filter>renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="renderer\RenderCommand.h">
+      <Filter>renderer</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="platform\windows\GLViewImpl_win.cpp">
@@ -135,14 +129,8 @@
     <ClCompile Include="base\Node.cpp">
       <Filter>base</Filter>
     </ClCompile>
-    <ClCompile Include="base\inlineNode.cpp">
-      <Filter>base</Filter>
-    </ClCompile>
     <ClCompile Include="math\XEMath.cpp">
       <Filter>math</Filter>
-    </ClCompile>
-    <ClCompile Include="renderer\Renderer.cpp">
-      <Filter>renderer</Filter>
     </ClCompile>
     <ClCompile Include="renderer\FrameBuffer.cpp">
       <Filter>renderer</Filter>
@@ -153,21 +141,6 @@
     <ClCompile Include="base\Sprite.cpp">
       <Filter>base</Filter>
     </ClCompile>
-    <ClCompile Include="base\NodeDraw.cpp">
-      <Filter>base</Filter>
-    </ClCompile>
-    <ClCompile Include="renderer\CommandPrimitive.cpp">
-      <Filter>renderer</Filter>
-    </ClCompile>
-    <ClCompile Include="renderer\CommandTriangle.cpp">
-      <Filter>renderer</Filter>
-    </ClCompile>
-    <ClCompile Include="renderer\CommandMesh.cpp">
-      <Filter>renderer</Filter>
-    </ClCompile>
-    <ClCompile Include="renderer\IRenderCommand.cpp">
-      <Filter>renderer</Filter>
-    </ClCompile>
     <ClCompile Include="renderer\Texture2D.cpp">
       <Filter>renderer</Filter>
     </ClCompile>
@@ -175,5 +148,17 @@
       <Filter>renderer</Filter>
     </ClCompile>
     <ClCompile Include="xeTypes.cpp" />
+    <ClCompile Include="base\Scene.cpp">
+      <Filter>base</Filter>
+    </ClCompile>
+    <ClCompile Include="base\Camera.cpp">
+      <Filter>base</Filter>
+    </ClCompile>
+    <ClCompile Include="renderer\Renderer.cpp">
+      <Filter>renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="renderer\RenderCommand.cpp">
+      <Filter>renderer</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
