--- a/og.0.6.SplineCurve/og.0.6.SplineCurve.vcxproj.filters
+++ b/og.0.6.SplineCurve/og.0.6.SplineCurve.vcxproj.filters
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ClInclude Include="spline.hpp" />
     <ClInclude Include="vec3.hpp" />
+    <ClInclude Include="MySpline.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="spline.inl" />
